--- a/example/main.html
+++ b/example/main.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="file.css">
-    <script src="src.js"></script>
+    <script src="api.js"></script>
   </head>
   <body>
     
